--- a/style.css
+++ b/style.css
@@ -14,9 +14,13 @@ h1{
     margin-top: 150px;
     margin-bottom: 50px;
 }
+main{
+    width: 450px;
+    height: 200px;
+    margin-left: auto;
+    margin-right: auto;
+}
 #myTime{
     background-color: white;
-    display: inline-block;
-    padding: 30px;
-    margin: 0 37%;
+    padding: 35px 40px;
 }
